# backend/docs/swagger.json
@@ -12,7 +12,51 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/prompt": {
+        "/prompts": {
+            "get": {
+                "description": "read prompts",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "prompt"
+                ],
+                "summary": "Read Prompts",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "name": "isPublic",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "llmId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ReadPromptsResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "create prompt",
                 "consumes": [
@@ -43,9 +87,9 @@
                 }
             }
         },
-        "/prompts": {
-            "get": {
-                "description": "read prompts",
+        "/users": {
+            "post": {
+                "description": "ユーザーを登録します",
                 "consumes": [
                     "application/json"
                 ],
@@ -53,37 +97,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "prompt"
+                    "user"
                 ],
-                "summary": "Read Prompts",
-                "parameters": [
-                    {
-                        "type": "boolean",
-                        "name": "isPublic",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "llmId",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "size",
-                        "in": "query"
-                    }
-                ],
+                "summary": "ユーザー登録",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ReadPromptsResponse"
-                        }
+                        "description": "OK"
                     }
                 }
             }
